IE testing + demo html (using before.substring instead of before[before.length-1])

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<![endif]-->
 	<link rel="stylesheet" type="text/css" media="all" href="jquery.codeassist.css"/>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-	<script type="text/javascript" src="jquery.codeassist.js"></script>
+	<script type="text/javascript" src="jquery.codeassist.min.js"></script>
 </head>
 <body id="index" class="home">
 	<p>This is a demo of the jquery.codeassist plugin, written by <a href="http://atomantic.github.com">Adam Eivy</a> and hosted on <a href="http://github.com/atomantic/jquery.jquerycodeassist">GitHub</a></p>
@@ -21,9 +21,13 @@
 	<p>Enter some text and type a $ character to bring up the menu.</p>
 	<textarea id="dollar"></textarea>
 	
-	<h1>Brackets</h1>
+	<h1>Square Brackets</h1>
 	<p>Enter some text and type a [ character to bring up the menu.</p>
 	<textarea id="brackets"></textarea>
+	
+	<h1>HTML Brackets</h1>
+	<p>Enter some text and type a &lt; character to bring up the menu.</p>
+	<textarea id="htmlbrackets"></textarea>
 	
 	<script type="text/javascript">
 		$(function(){
@@ -36,6 +40,16 @@
 			$('#brackets').codeassist({
 				key:'[',
 				closeKey:']',
+				list:[
+					'UserID',
+					'Avatar',
+					'NickName',
+					'ProfileURL'
+				]
+			});
+			$('#htmlbrackets').codeassist({
+				key:'<',
+				closeKey:'>',
 				list:[
 					'UserID',
 					'Avatar',
